# lineman

./: CMakeLists.txt  README.md  README.txt  SPECIFICATION.md  main.cpp
config/: assets.txt  gamescene_keybinds.ini  level1.txt  level1_64.txt  level2.txt  supported_keys.ini
docs/: backlog.txt
include/: Action.hpp  Animation.hpp  Assets.hpp  Collision.hpp  Components.hpp  Data.hpp  DebugGui.hpp  DeltaTime.hpp  Effect.hpp  EffectManager.hpp  Entity.hpp  EntityManager.hpp  EntityMemoryPool.hpp  GUI.hpp  GameEngine.hpp  Grid.hpp  Physics.hpp  PlayerData.hpp  PlayerGui.hpp  PlayerMovement.hpp  Scene.hpp  SceneMenu.hpp  SceneMenuControls.hpp  SceneMenuOptions.hpp  ScenePlay.hpp  Sinventory.hpp  Tags.hpp  Vec2.hpp
shaders/: effects.frag  red_fade.frag
src/: Animation.cpp  Assets.cpp  Collision.cpp  DebugGui.cpp  DeltaTime.cpp  Effect.cpp  EffectManager.cpp  Entity.cpp  EntityManager.cpp  EntityMemoryPool.cpp  GUI.cpp  GameEngine.cpp  Grid.cpp  Physics.cpp  PlayerData.cpp  PlayerGui.cpp  PlayerMovement.cpp  Scene.cpp  SceneMenu.cpp  SceneMenuControls.cpp  SceneMenuOptions.cpp  ScenePlay.cpp  Sinventory.cpp  Vec2.cpp
tests/: test_jumping.hpp  test_panel_icon.hpp  test_parallax_shader.hpp  test_rain.hpp  test_shaders.hpp
